# scal3

./: .gitignore  Cargo.toml  README.md  demo.ipynb  demo.scala
.cargo/: config.toml
.github/workflows/: ci.yaml
docs/: tlog.md
docs/report/: Makefile  README.md  thresholds.bib  thresholds.tex
docs/schemes/: ctap2.md  thresholds.md  uaf.md
scripts/: verify-static-linking.sh
src/: README.md  api.rs  dispatch.rs  domain.rs  ffi.rs  group.rs  handle.rs  kem.rs  lib.rs  program.rs  rng.rs  runtime.rs
src/api/: buffer.rs  mod.rs  provider.rs  subscriber.rs
src/program/: mod.rs  provider.rs  subscriber.rs
