[package]
name = "scal3"
description = "Verify that systems operate under your sole control (prototype, patent pending)"
license = "CC-BY-NC-4.0"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/cleverbase/scal3"
authors = ["Sander Dijkhuis <sander.dijkhuis@cleverbase.com>"]
readme = "src/README.md"
categories = ["authentication", "cryptography"]
exclude = ["/README.md", "/docs/**/*"]

[dependencies]
frost-core = "2.1.0"
frost-p256 = "2.1.0"
p256 = { version = "0.13.2", features = ["serde"] }
rand_chacha = "0.9.0"
sha2 = "0.10.8"
signature = "2.2.0"
hpke = "0.13.0"

[dev-dependencies]
hmac = "0.12.1"
