[package]
name = "scal3"
description = "Verify that systems operate under your sole control (prototype, patent pending)"
license = "CC-BY-NC-4.0"
version = "0.3.7"
edition = "2021"
repository = "https://github.com/cleverbase/scal3"
authors = ["Sander Dijkhuis <sander.dijkhuis@cleverbase.com>"]
readme = "src/README.md"
categories = ["authentication", "cryptography"]
exclude = ["/README.md", "/docs/**/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.15", default-features = false, features = ["custom"] }
frost-core = { version = "2.1.0", default-features = false, features = ["serialization"] }
frost-p256 = { version = "2.1.0", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "serde"] }
rand_chacha = { version = "0.9.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
signature = { version = "2.2.0", default-features = false }
hpke = { version = "0.13.0", default-features = false, features = ["p256"] }
minicbor = { version = "0.26.5", default-features = false, features = ["alloc", "derive"] }
minicbor-serde = { version = "0.4.1", features = ["alloc"] }
minicbor-derive = "0.16.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
once_cell = "1.21.3"
spin = { version = "0.9.8", default-features = false, features = ["mutex", "once", "spin_mutex"] }

[dev-dependencies]
hmac = "0.12.1"
